--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,10 +6,10 @@ steps:
       - build
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'asia-northeast1-docker.pkg.dev/${PROJECT_ID}/cicd-test-ar/cicd-image:late', '.']
+    args: ['build', '-t', 'asia-northeast1-docker.pkg.dev/${PROJECT_ID}/davinchi-cicd-ar/davinchi-image:lateset', '.']
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'push', 'asia-northeast1-docker.pkg.dev/${PROJECT_ID}/cicd-test-ar/cicd-image:late' ]
+    args: [ 'push', 'asia-northeast1-docker.pkg.dev/${PROJECT_ID}/davinchi-cicd-ar/davinchi-image:latest' ]
 
 options:
   logging: CLOUD_LOGGING_ONLY
