:bug: bug: cloudbuild.yaml 로깅 옵션 추가
cloudbuild.yaml CLOUD_LOGGING_ONLY 로깅 옵션 추가

Resolves: #4

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,3 +11,6 @@ steps:
   # 2. Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
     args: [ 'push', 'asia-northeast1-docker.pkg.dev/${PROJECT_ID}/davinchi-cicd-ar/davinchi-image:latest' ]
+
+options:
+  logging: CLOUD_LOGGING_ONLY
