--- a/build.gradle
+++ b/build.gradle
@@ -23,21 +23,13 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
-	// security && jwt
-	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
-	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
-
-	//OAuth2
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-
+	//implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.security:spring-security-test'
+	//testImplementation 'org.springframework.security:spring-security-test'
 
 	//Swagger
 	implementation 'io.springfox:springfox-swagger2:3.0.0'
@@ -48,6 +40,6 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
-//bootJar {
-//	archiveFileName = 'app.jar'
-//}
+bootJar {
+	archiveFileName = 'app.jar'
+}
