:rewind: #15 fix: 다시

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,4 +15,4 @@ spring:
         format_sql: true
 
 jwt:
-  secret-key: ${JWT_SECRET_KEY}
+  secret-key: r+BTflx7/sYK6hIef4Vas6a2Q7VeM47Grrv/VzYGOEY=
