--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,6 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
-bootJar {
-	archiveFileName = 'app.jar'
-}
+//bootJar {
+//	archiveFileName = 'app.jar'
+//}
