--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,8 @@ dependencies {
 
 	//Websocket
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	implementation 'org.webjars:stomp-websocket:2.3.3-1'
+
 
 }
 
