:bug: bug: GCS 이미지 업로드 버그 해결
cloudbuild.yaml 환경변수 설정, 서비스 로직 수정

Resolves: #36

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
     gcp:
       storage:
         credentials:
-          location: ${STORAGE_KEYFILE}
+          encoded-key: ${STORAGE_KEYFILE}
         project-id: ${PROJECT_ID}
         bucket: davinchi-cs
 
