:twisted_rightwards_arrows: #25 chroe : 병합

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,5 +21,15 @@ logging:
   level:
     org.springframework.security: DEBUG
 
+  cloud:
+    gcp:
+      storage:
+        credentials:
+          encoded-key: ${STORAGE_KEYFILE}
+        project-id: ${PROJECT_ID}
+        bucket: davinchi-cs
+
+
+
 jwt:
   secret-key: ${JWT_SECRET_KEY}
