--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,11 @@ out/
 
 ### VS Code ###
 .vscode/
+
+davinchi-GCS-keyfile.json
+
+### Ds_Store ###
+.DS_Store
+._.DS_Store
+**/.DS_Store
+**/._.DS_Store
